--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Fri Apr 17 11:30:10 BDT 2020
-sdk.dir=C\:\\Users\\Manishankar Vakta\\AppData\\Local\\Android\\Sdk
+#Fri Apr 17 13:26:11 BDT 2020
+sdk.dir=C\:\\Users\\sushen\\AppData\\Local\\Android\\Sdk
